hermes_fuzz_executed_few_shot_v2/fuzz_24_execution
'use strict';
var myFunction = {
  [Symbol("species")]: () => Promise.resolve(),
  foo: () => Promise.resolve(),
}; 

myFunction["species"]();
```

## 参考文章



Execution Output ------------------:
test.js:12:1: error: non-terminated template literal

^
test.js:8:3: note: template literal started here
```
  ^
test.js:12:1: error: invalid expression

^
